--- a/design.css
+++ b/design.css
@@ -24,7 +24,6 @@ body{
 
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
   justify-content: center;
   width: 600px;
   height: 400px;
@@ -59,6 +58,7 @@ button{
 .button-wrapper{
 position: relative;
 display: inline-block;
+align-self: flex-end;
 }
 
 .button-wrapper .slide-out{
@@ -76,6 +76,24 @@ display: inline-block;
     transform: translateX(-75px);
     opacity: 1;
 }
+
+.exit-btn {
+    top: 10px;
+    left: 10px;
+    width: 20px;
+    height: 20px;
+    background-color: red;
+    background-image: none; 
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    align-self:flex-start;
+    cursor: pointer;
+    z-index: 10;
+    border-radius: 5px;
+    
+}
+
 #equipment{
 
 }
@@ -86,5 +104,17 @@ display: inline-block;
 
 }
 #achievement{
-  
+
+}
+#spells{
+
+}
+#weapons{
+
+}
+#armour{
+
+}
+#artifacts{
+
 }
