--- a/design.css
+++ b/design.css
@@ -137,3 +137,11 @@ align-self: flex-end;
 #artifacts{
 
 }
+.character{
+  width:40px;
+  height:40px;
+  background-color: red;
+  position: absolute;
+  bottom: 200px;
+  left: 200px;
+}
