--- a/design.css
+++ b/design.css
@@ -2,6 +2,13 @@ body{
   font-family: 'Geo', sans-serif;
   font-weight: 400;
   font-style: normal;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 0;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
 
 .geo-regular-italic {
@@ -24,23 +31,17 @@ img{
 p{
     color: white
 }
-body{
-  margin: 0;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
 
 .container{
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr, 1fr, 1.5fr;
+  gap: 10px;
   width: 600px;
   height: 400px;
   padding: 20px;
+  margin: 20px;
   border: 2px solid black;
   background: rgba(92, 46, 83, 0.5);
   backdrop-filter: blur(10px);
@@ -48,21 +49,26 @@ body{
   border:5px solid rgb(42, 30, 38);
 }
 
+#left{
+  width:300px;
+  height: 400px;
+}
+
+#right{
+  width:300px;
+  height: 400px;
+}
+
 .main-btn {
     background-color: transparent; 
     border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     border-radius:10px;
-    width:75px;
-    height:75px;
-    margin:10px;
-    padding: 12px 24px;
+    width:100%;
+    height:100%;
+    padding: 50px;
     cursor: pointer;
     position: relative;
     z-index: 2;
-    -webkit-text-fill-color: aliceblue;
     font-weight: bold;
 }
 
@@ -90,8 +96,9 @@ align-self: flex-end;
 }
 
 .exit-btn {
-    top: 10px;
-    left: 10px;
+    position: absolute;
+    top: 20px;
+    left: 20px;
     width: 20px;
     height: 20px;
     background-color: red;
@@ -103,40 +110,61 @@ align-self: flex-end;
     cursor: pointer;
     z-index: 10;
     border-radius: 5px;
-    
+}
+
+#music-popout{
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  width: 100px;
+  height: 100px;
+  z-index:10px;
+  cursor: grab;
+  box-shadow: 10 10 10px black;
 }
 
 #equipment{
+  grid-column: 1; grid-row:3;
   background-image: url("Icons/backpack.png");
-  background-repeat: no repeat;
+  background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
   z-index: 20;
 }
 
 #skill-tree{
+  grid-column: 2; grid-row:3;
   background-image: url("Icons/skill-tree.png");
-  background-repeat: no repeat;
+  background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
   z-index: 20;
 
 }
 #save-slot{
+  grid-column: 3; grid-row:3;
   background-image: url("Icons/save.png");
-  background-repeat: no repeat;
+  background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
   z-index: 20;
 
 }
 #achievements{
+  grid-column: 4; grid-row:3;
   background-image: url("Icons/achievements.png");
-  background-repeat: no repeat;
+  background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
   z-index: 20;
 }
+
+h1{
+  grid-column: 1 / span 4;
+  grid-row: 1;
+  text-align: center;
+}
+
 #equipment-container{
   display: none;
 }
