--- a/design.css
+++ b/design.css
@@ -111,16 +111,22 @@ align-self: flex-end;
     z-index: 10;
     border-radius: 5px;
 }
+#spotify-player iframe{
+  width:100%;
+  height:100%;
+  border:none;
+}
 
-#music-popout{
+.spotify-floating{
   position: fixed;
   bottom: 20px;
   left: 20px;
-  width: 100px;
-  height: 100px;
   z-index:10px;
+  width:300px;
+  height:200px;
   cursor: grab;
-  box-shadow: 10 10 10px black;
+  overflow: hidden;
+  border: none;
 }
 
 #equipment{
