--- a/design.css
+++ b/design.css
@@ -117,24 +117,30 @@ align-self: flex-end;
 #spotify-player{
   opacity: 0;
   transition: opacity 0.5s ease;
-}
-#spotify-player iframe{
-  width:100%;
-  height:100%;
-  border:none;
-  pointer-events: none;
-}
-
-.spotify-floating{
   position: fixed;
   bottom: 20px;
   left: 20px;
-  z-index:10px;
+  z-index:10;
   width:300px;
   height:200px;
-  cursor: grab;
+  cursor: default;
   overflow: hidden;
   border: none;
+}
+#spotify-player iframe{
+  position:absolute;
+  width:calc(100% - 20px);
+  height:100%;
+  border:none;
+  pointer-events: auto;
+}
+
+#spotify-drag-bar{
+  z-index: 20;
+  height:20px;
+  width:100%;
+  cursor:grab;
+  user-select: none;;
 }
 
 #equipment{
@@ -152,7 +158,7 @@ align-self: flex-end;
   position: absolute;
   left: 150px;
   bottom: 0px;
-  background-image: url("Icons/scrapbook.png");
+  background-image: url("Icons/Box-computer.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -216,11 +222,11 @@ h1{
 #music-box{
   position:absolute;
   padding:50px;
-  right:5px;
-  bottom:5px;
-  width:50px;
-  height:50px;
-  background-image: url("Icons/Trophy.png");
+  right:0px;
+  bottom: -20px;
+  width:100px;
+  height:100px;
+  background-image: url("Icons/Speakers.png");
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
@@ -235,7 +241,21 @@ h1{
   left:5px;
   width:50px;
   height:50px;
-  background-image: url("Icons/Trophy.png");
+  background-image: url("Icons/Planet.png");
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  border:none;
+}
+
+#weather{
+  position:absolute;
+  right: 5px;
+  top: -100px;
+  width:150px;
+  height:120px;
+  background-image: url("Icons/Weather.png");
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
@@ -271,46 +291,95 @@ h1{
 
 #github{
   width:75px;
-  height:75px;
+  height:50px;
   background-image: url("Icons/GitHub-Logo.png");
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
   border:none;
-  padding:20px;
+  padding:20px 50px;
 }
 #linkedin{
   width: 75px;
-  height:75px;
+  height:50px;
   background-image: url("Icons/LinkedIn-Logo.wine.svg");
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
   border:none;
-  padding:20px;
+  padding: 30px 50px;
 }
 
 #discord{
   width:75px;
-  height:75px;
+  height:50px;
   background-image: url("Icons/discord.svg");
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
   border:none;
-  padding:20px;
+  padding:20px 50px;
 }
 #itch{
   width:75px;
-  height:75px;
+  height:50px;
   background-image: url("Icons/itch-io-logo.png");
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   border:none;
-  padding:20px;
+  padding:30px 50px;
+}
+
+.card{
+  height: 200px;
+  width:125px;
+  background: linear-gradient(135deg, #00feba, #5b548a);
+  color:#fff;
+  margin: 100px auto 0;
+  border-radius: 20px;
+  padding: 35px;
+  text-align:center;
+}
+
+.search{
+  width:100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.search input{
+  border:0;
+  outline:0;
+  border-radius: 20px;
+  padding: 5px 10px;
+  font-size:12px;
+  width:100px;
+  background: #ebfffc;
+  color:#555;
+  margin-right: 8px;
+  height: 20px;
+}
+
+.search button{
+  flex-shrink:0;
+  border:0;
+  outline:0;
+  background: #ebfffc;
+  width:40px;
+  height:40px;
+  border-radius: 50%;
+  cursor:pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search button img{
+  width:16px;
+  height:16px;
 }
